OID 1.3.6.1.5.5.7.8.5 (id-on-xmppAddr) not recognized by BER dissector.
This issue was migrated from bug 2835 in our old bug tracker.
Original bug information:
Reporter: Adam Buchbinder
Status: RESOLVED FIXED
Product: Wireshark
Component: GTK+ UI
OS: All
Platform: x86
Version: 1.0.0
Attachments:
kerckhoffs.g10code.com.pem: Certificate using OID 1.3.6.1.5.5.7.8.5.
g10code-cert.pcap: Captured packet bearing the cert in question.