OID 1.3.6.1.5.5.7.8.5 (id-on-xmppAddr) not recognized by BER dissector. https://bugs.wireshark.org/bugzilla/show_bug.cgi?id=2835

svn path=/trunk/; revision=26104